--- a/US.yaml
+++ b/US.yaml
@@ -1,8 +1,18 @@
-DOMAIN-SUFFIX,fubo.tv
-DOMAIN-SUFFIX,fubotv.com
-DOMAIN-SUFFIX,starplus.com
-DOMAIN-SUFFIX,starott.com
-DOMAIN-SUFFIX,star.api.edge.bamgrid.com
-DOMAIN-SUFFIX,star.connections.edge.bamgrid.com
-DOMAIN-SUFFIX,star.content.edge.bamgrid.com
-DOMAIN-SUFFIX,star.playback.edge.bamgrid.com
+# NAME: starplus
+payload:
+  - DOMAIN-SUFFIX,starplus.com
+  - DOMAIN-SUFFIX,starott.com
+  - DOMAIN-SUFFIX,star.api.edge.bamgrid.com
+  - DOMAIN-SUFFIX,star.connections.edge.bamgrid.com
+  - DOMAIN-SUFFIX,star.content.edge.bamgrid.com
+  - DOMAIN-SUFFIX,star.playback.edge.bamgrid.com
+  
+# NAME: FuboTV
+# AUTHOR: blackmatrix7
+# REPO: https://github.com/blackmatrix7/ios_rule_script
+# UPDATED: 2022-01-18 23:33:37
+# DOMAIN-SUFFIX: 2
+# TOTAL: 2
+payload:
+  - DOMAIN-SUFFIX,fubo.tv
+  - DOMAIN-SUFFIX,fubotv.com
