--- a/aptv.yaml
+++ b/aptv.yaml
@@ -1,4 +1,4 @@
 # NAME: aptvapp.com
 payload:
-- DOMAIN-SUFFIX,aptvapp.com
-- USER-AGENT,AptvPlayer*
+  - DOMAIN-SUFFIX,aptvapp.com
+  - USER-AGENT,AptvPlayer*,DIRECT
