--- a/Personal only.yaml
+++ b/Personal only.yaml
@@ -1,4 +1,5 @@
 # NAME: embyvip.com
 payload:
-  - DOMAIN-SUFFIX，embyvip
+  - DOMAIN-SUFFIX,cfprefer3.xyz
+  - DOMAIN-SUFFIX,misakaf.org
   - DOMAIN-KEYWORD,embyvip
