--- a/Personal HK.yaml
+++ b/Personal HK.yaml
@@ -9,5 +9,5 @@ payload:
   - DOMAIN-SUFFIX,googleusercontent.com
 
 # NAME: discuss
-  - DOMAIN-SUFFIX,discuss.com
+  - DOMAIN-SUFFIX,discuss.com.hk
 # - DOMAIN-KEYWORD,
